# hom-nay-an-gi

./: index.html  package-lock.json  package.json  svelte.config.js
.github/workflows/: deploy-web.yml
_app/: version.json
_app/immutable/assets/: 2.DFWGAFQb.css
_app/immutable/chunks/: 8OW-2IhS.js  C8DyzFYf.js  CK8WQkck.js  CZhFEl4a.js  DKTbRAgX.js  DMGd0CyD.js  DmZBJtPH.js  Fhh0suPO.js  N6-jj7n-.js
_app/immutable/entry/: app.5h_qwXj3.js  app.BDbHYMeJ.js  start.CB5qzK59.js  start.CipmgHSq.js
_app/immutable/nodes/: 0.DAwo1jTk.js  1.BNsBAlkq.js  1.Bui2VMYT.js  2.B4xX7S6c.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: data.ts  store.ts
src/lib/components/: LuckyWheel.svelte  RecipeModal.svelte  ResultModal.svelte  SplashScreen.svelte
src/routes/: +page.svelte
