[package]
name = "eat-what"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eat_what_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize for binary size
[profile.release]
opt-level = "z"      # Optimize for size (smallest binary)
lto = "thin"         # Link-time optimization (thin = good balance)
codegen-units = 1    # Single codegen unit = better optimization
strip = true         # Strip debug symbols from binary
panic = "abort"      # Remove panic unwinding code (saves ~10%)


